# diobank

./: .env  README.md  diobank.sqlite  pyproject.toml  pytest.ini  security.py
migrations/: env.py
migrations/versions/: 347f3507e800_add_initial_tables.py
src/: config.py  database.py  main.py
src/controllers/: auth.py  bank.py
src/models/: account.py  transaction.py
src/schemas/: auth.py  bank.py
src/services/: bank.py
src/views/: bank.py
tests/: conftest.py
tests/integration/controllers/auth/: test_login.py
tests/integration/controllers/bank/: test_create_account.py
